This is the Changelog for GregTech-6-Unofficial
6.15.07-unofficial: (Not released yet).

6.15.06-unofficial: (Not released yet).
[ADDED]
Aquatic Farm. Multiblock structure. It consumes water/aquatic nutrition water and fish fry and cultivates fish for you.
You need to think about how to deal with the output aquatic waste water.
[CHANGED] Some Ores can generate in Nether now. Copper can generate in Vanilla Stone layers only in Mountains Biomes.
[CHANGED]
New Solar System. It is similar to Steam Boiler System.
The new solar system is a multiblock structure. Now the Solar Photovoltaic Panel works as Solar Panel like before, but it output Light Power (LP).
Then you need Solar Panel to transform LP to EU.
And you can use Optical Fiber to transport LP from a lot of Solar Photovoltaic Panel.
Also now there is LP sensor like EU sensor.
[COMPAT]
The Solar system can also work in Twilight Forest or Planet now (Twilight Forest or GalacticCraft should be loaded)

6.15.05-unofficial:
[FIXED] MESU Casing requires double plastic plates to craft.
[FIXED] Copper and Magic Circuit Plates can be recycled to dupe Plastic since they can now be produced with Phenolic Circuit Plates.

6.15.04-unofficial:
[FIXED] When NetheritePlus and Netherlicous are installed at same time, the game will crash.

6.15.03-unofficial:.
[FIXED] MESU requries quadruple rubber plate which cannot be crafted.

6.15.02-unofficial:
[NOTE] Future GT6U version will have a "-unofficial" at the end.
[NOTE] Because the 6.15.00 update is a major merge with Official branch, please report any bugs (e.g. recipes are gone) to the Issues tracker. Thank you.
[FIXED] Some fusion recipes are gone.
[FIXED] Matter Fabrication recipes for Charged Matter and Neutral Matter are gone.
[FIXED] Recipes for superconducter wires are gone.
[FIXED] Biomass recipes in fermenter are gone.

6.15.01-unofficial:
[NOTE] This is a Hotfix (Minor change).